FM-57 : Added Endpoint To Obtain All Events
Endpoint created to allow phone to obtain an entire list of events
that are not in the past that are correctly sorted.
