# swagger.yml
@@ -41,6 +41,20 @@ paths:
               schema:
                 $ref: '#/components/schemas/BaseApiModel'
   /event:
+    get:
+      tags:
+        - event
+      summary: Displays all current or future events.
+      operationId: getAllEvents
+      responses:
+        200:
+          description: All upcoming evnets.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Event'
     post:
       tags:
         - event
